[gd_scene load_steps=3 format=3 uid="uid://d26wyyaks6dxn"]

[ext_resource type="Script" uid="uid://bxigyhyqdcf" path="res://Scripts/UI/cutscene_chapter_2.gd" id="1_1fj05"]
[ext_resource type="VideoStream" uid="uid://cwi7syn0da2ce" path="res://video/cut-chapter2.ogv" id="1_bih6f"]

[node name="CutsceneChapter2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1fj05")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("1_bih6f")
autoplay = true
expand = true

[node name="TextureButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -89.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.105882354)
theme_override_font_sizes/font_size = 30
text = "Skip"
flat = true

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
